# hello-spec-kit

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  main.py  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
models/: __init__.py  py.typed  schemas.py
specs/001-health-endpoint/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-health-endpoint/checklists/: requirements.md
specs/001-health-endpoint/contracts/: health-api.yaml  kubernetes-probes.md
specs/002-pydantic-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-pydantic-validation/checklists/: requirements.md
specs/002-pydantic-validation/contracts/: README.md  health-api.yaml  validation-errors.md
tests/unit/: test_health.py  test_health_validation.py  test_pydantic_validation.py  test_type_checking.py
