[project]
name = "fastapi-uv"
version = "0.1.0"
description = "A minimal fastapi project with uv and docker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi == 0.115.11",
    "uvicorn >= 0.34.0",
    "uv >= 0.5.1",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
